[package]
name = "tag"
version = "0.1.0"
authors = ["Jan Tebernum <jan.tebernum@gmail.com>"]
description = """
tags is a tool to help organise your files via tags.
"""
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "core/main.rs"
name = "tag"

[workspace]
members = [
    "tags"
]

[dependencies]
clap = "4.0.27"
tags = { path = "tags" }
